<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inventario.view.InventarioFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tInventario"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tListaPeluches"
        android:id="@+id/tInventario"
        android:textSize="25dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/bInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bInventario"
        android:textSize="25dp"
        android:padding="15dp"/>

</LinearLayout>